# msfitslib

./: CMakeLists.txt  CMakeLists.txt.topaz  README.md  basedefines.h  baselib.mak  bg_fits.cpp  bg_fits.h  bg_globals.h  bg_vis.cpp  build.sh  ccddriver_interface.cpp  flags.mak  lib.mak  libnova_interface.cpp  makefile  meson.build  meson_srclist.txt  msfitslib.pc.in  mydate.h  myfits.h  mylibloader.cpp  mylock.cpp  mylock.h  mypipe.cpp  myshmem.cpp  mysignal.cpp  mytxtclient.h  mytxtinetserver.cpp  mytxtinetserver.h  mytxtserver.cpp  mytxtserver.h  options.mak  radec2azh.cpp  sid2ux.cpp  sighorns.h  ux2sid.cpp  ux2sid_file.cpp
api/: msfitslib.h
apps/: avg_images.cpp  azh2radec.cpp  build_dynaspec_simple.cpp  calcfits_bg.cpp  cutimage.cpp  cutimages.cpp  date2date.cpp  diff_channels.sh  fits2txt.cpp  fixCoordHdr.cpp  flip_horizontal.cpp  flip_vertical.cpp  homeopatic_avg.cpp  image_differencer.cpp  images2cube.cpp  main_fft_file.cpp  mecube2cubes.cpp  mecube2cubes.sh  median_fits_images.cpp  noise_mapper.cpp  print_sun.cpp  read_write_fits_example.cpp  select_integrations.cpp  setfitsvalue.cpp  shift_image.cpp  sid2ux.cpp  subtract_images.cpp  sum_images.cpp  total_power_hor.cpp  total_power_simple.cpp  total_power_vert.cpp
apps/dump_lc/: lc_table.cpp  lc_table.h  main.cpp
modulefiles/topaz/: devel.lua
src/: array_config_common.cpp  array_config_common.h  basestring.cpp  bg_array.cpp  bg_array.h  bg_date.cpp  bg_date.h  bg_defines.h  bg_fits.cpp  bg_fits.h  bg_globals.cpp  bg_globals.h  bg_norm.cpp  ccdanal_interf.h  ccddriver_interface.h  ccdrowcollist.cpp  cvalue_vector.cpp  flags_main.mak  lib.mak  libnova_interface.cpp  libnova_interface.h  makefile  many_tab2D.hxx  msfitslib.mak  mybaseserver.cpp  mybaseserver.h  mybits.cpp  mydate.cpp  mydate.h  myfile.cpp  myfits.cpp  myframeslist.cpp  myhisto.cpp  myhisto.h  mylibloader.h  mylock.cpp  mylock.h  mymatrix.cpp  mymsgqueue.cpp  mymsgqueue.h  (+24 more)
src/avg_images/: Makefile  main.cpp
src/dump_lc/: Makefile  dump_lc  lc_table.h  main.cpp
src/pacer_dirty_image/: Makefile  main.cpp
src/running_median/: Makefile  main.cpp
test/images2cube/: chan_176_20240517T11302200_I.fits  doit!  fits_list
